Fix DocumentsGroupe overflow problem

--- a/apps/website/src/components/documents/documents.scss
+++ b/apps/website/src/components/documents/documents.scss
@@ -1,16 +1,21 @@
 .documents-container {
   justify-self: center;
-  max-width: 100svw;
+  width: 100svw;
 
   display: flex;
   flex-direction: column;
 
   overflow: hidden;
+
+  .document-group-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
 
 .document-group-container {
   width: 30rem;
-  height: 30rem;
+  min-height: 30rem;
   background: $secondary-background;
   border-radius: 8px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
